...
        this.setState({ showCreateDialog: false });
    }

    render() {
        const TABS = [
            { icon: <View />, to: 'dashboard' },
            { icon: <Note />, to: 'create', primary: true, onPress: this.showCreateDialog, testID: 'dashboard__tabBar__createButton' },
            { icon: <View />, to: 'dashboard' }
        ];

        return (
            <BackgroundGradient
                from={COLORS.primary}
...
